--- a/MS43_Recalc/MainWindow.xaml
+++ b/MS43_Recalc/MainWindow.xaml
@@ -1,14 +1,13 @@
 ﻿<Window x:Class="MS43_Recalc.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BMW_MS43_recalculation" Height="1010" Width="794" WindowStartupLocation="CenterScreen" ScrollViewer.CanContentScroll="True">
+        Title="BMW_MS43_recalculation" Height="600" Width="794" WindowStartupLocation="CenterOwner" ScrollViewer.CanContentScroll="True">
     <Grid>
         <Menu HorizontalAlignment="Left" Height="100" Margin="370,0,0,0" VerticalAlignment="Top" Width="399">
             <MenuItem Header="Load data" >
                 <MenuItem Header="Load log" Click="MenuItem_Click" HorizontalAlignment="Left" Width="190"/>
                 <MenuItem Header="Load ECU settings"  Click="MenuItem_Click_2" HorizontalAlignment="Left" Width="190"/>
             </MenuItem>
-            <MenuItem Header="Calculate AFR from log" />
             <MenuItem Header="Calculate ECU settings" Click="MenuItem_Click_3" />
 
         </Menu>
@@ -42,10 +41,10 @@
                 </Grid>
             </TabItem>
             <TabItem x:Name="AFR" Header="AFR">
-
-                <Grid Background="#FFE5E5E5">
+                <ScrollViewer Height="491" VerticalAlignment="Top">
+                <Grid Background="#FFE5E5E5" ScrollViewer.VerticalScrollBarVisibility="Auto" MinHeight="650" >
                     <DataGrid AutoGenerateColumns="False" 
-          Height="376" 
+          Height="397" 
           HorizontalAlignment="Left" 
           Name="Afr_from_log" 
           VerticalAlignment="Top" 
@@ -82,9 +81,10 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </Grid>
+                </ScrollViewer>
             </TabItem>
             <TabItem x:Name="ECUCurrentSettings" Header="Current ECU settings">
-                <ScrollViewer>
+                <ScrollViewer Margin="0,0,0,412">
                     <Grid Background="#FFE5E5E5" ScrollViewer.VerticalScrollBarVisibility="Auto" MinHeight="2000">
                         <DataGrid AutoGenerateColumns="False" 
           HorizontalAlignment="Left" 
@@ -184,55 +184,56 @@
                 </ScrollViewer>
             </TabItem>
             <TabItem x:Name="Target_AFR" Header="Target AFR">
-
-                <Grid Background="#FFE5E5E5">
-                    <DataGrid AutoGenerateColumns="False" 
+                <ScrollViewer Margin="0,0,0,412">
+                    <Grid Background="#FFE5E5E5">
+                        <DataGrid AutoGenerateColumns="False" 
           Height="389" 
           HorizontalAlignment="Left" 
           Name="target_afr" 
           VerticalAlignment="Top" 
           Width="729" Margin="10,10,0,0" SelectionUnit="Cell" LoadingRow="Grid1_LoadingRow" CanUserAddRows="false" CanUserReorderColumns="False" >
-                        <DataGrid.Columns >
-                            <DataGridTextColumn Binding="{Binding Path=A}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=B}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=C}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=D}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=E}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=F}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=G}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=H}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=I}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=Y}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=K}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Path=L}" MinWidth="50" />
-                        </DataGrid.Columns>
-                    </DataGrid>
-                    <DataGrid AutoGenerateColumns="False" 
+                            <DataGrid.Columns >
+                                <DataGridTextColumn Binding="{Binding Path=A}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=B}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=C}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=D}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=E}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=F}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=G}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=H}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=I}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=Y}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=K}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Path=L}" MinWidth="50" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                        <DataGrid AutoGenerateColumns="False" 
                     	Height="376" 
                     	HorizontalAlignment="Left" 
                     	x:Name="target_afr_idle" 
                     	VerticalAlignment="Top" 
                     	Width="729" Margin="10,428,0,0" SelectionUnit="Cell" LoadingRow="Grid2_LoadingRow" CanUserAddRows="false" CanUserReorderColumns="False" >
-                        <DataGrid.Columns >
-                            <DataGridTextColumn Binding="{Binding A}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding B}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding C}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding D}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding E}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding F}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding G}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding H}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding I}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding Y}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding K}" MinWidth="50" />
-                            <DataGridTextColumn Binding="{Binding L}" MinWidth="50" />
-                        </DataGrid.Columns>
-                    </DataGrid>
+                            <DataGrid.Columns >
+                                <DataGridTextColumn Binding="{Binding A}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding B}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding C}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding D}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding E}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding F}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding G}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding H}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding I}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding Y}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding K}" MinWidth="50" />
+                                <DataGridTextColumn Binding="{Binding L}" MinWidth="50" />
+                            </DataGrid.Columns>
+                        </DataGrid>
 
-                </Grid>
+                    </Grid>
+                </ScrollViewer>
             </TabItem>
             <TabItem x:Name="RecalcECUSettings" Header="Recalculated ECU settings">
-                <ScrollViewer>
+                <ScrollViewer Margin="0,0,0,412">
                     <Grid Background="#FFE5E5E5" ScrollViewer.VerticalScrollBarVisibility="Auto" MinHeight="2000" >
                         <DataGrid AutoGenerateColumns="False" 
           HorizontalAlignment="Left" 
